Feat: add basic UI to calculator

--- a/index.html
+++ b/index.html
@@ -7,5 +7,48 @@
     <script src="script.js"></script>
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="body-wrapper">
+      <div class="header"></div>
+      <div class="content">
+        <div class="calculator-body">
+          <div class="calculator-display">Display</div>
+          <div class="calculator-buttons">
+            <div class="top-btn">
+              <div class="col">
+                <button class="operation add">+</button>
+                <button class="num-btn">1</button>
+                <button class="num-btn">4</button>
+                <button class="num-btn">7</button>
+              </div>
+              <div class="col">
+                <button class="operation subtract">-</button>
+                <button class="num-btn">2</button>
+                <button class="num-btn">5</button>
+                <button class="num-btn">8</button>
+              </div>
+              <div class="col">
+                <button class="function delete">AC</button>
+                <button class="num-btn">3</button>
+                <button class="num-btn">6</button>
+                <button class="num-btn">9</button>
+              </div>
+              <div class="col">
+                <button class="function erase"><-</button>
+                <button class="operation multiply">x</button>
+                <button class="operation divide">/</button>
+              </div>
+            </div>
+            <div class="bottom-btn">
+              <div class="line">
+                <button class="num-btn">0</button>
+                <button class="equal">=</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer"></div>
+    </div>
+  </body>
 </html>
