Feat: add listeners to number and operation btns
Allow to see number and operations on the display

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <title>Document</title>
   </head>
   <body>
@@ -16,33 +16,33 @@
           <div class="calculator-buttons">
             <div class="top-btn">
               <div class="col">
-                <button class="operation add">+</button>
-                <button class="num-btn">1</button>
-                <button class="num-btn">4</button>
-                <button class="num-btn">7</button>
+                <button class="operation add" value="add">+</button>
+                <button class="num-btn" value="1">1</button>
+                <button class="num-btn" value="4">4</button>
+                <button class="num-btn" value="7">7</button>
               </div>
               <div class="col">
-                <button class="operation subtract">-</button>
-                <button class="num-btn">2</button>
-                <button class="num-btn">5</button>
-                <button class="num-btn">8</button>
+                <button class="operation subtract" value="subtract">-</button>
+                <button class="num-btn" value="2">2</button>
+                <button class="num-btn" value="5">5</button>
+                <button class="num-btn" value="8">8</button>
               </div>
               <div class="col">
-                <button class="function delete">AC</button>
-                <button class="num-btn">3</button>
-                <button class="num-btn">6</button>
-                <button class="num-btn">9</button>
+                <button class="function delete" value="clear">AC</button>
+                <button class="num-btn" value="3">3</button>
+                <button class="num-btn" value="6">6</button>
+                <button class="num-btn" value="9">9</button>
               </div>
               <div class="col">
-                <button class="function erase"><-</button>
-                <button class="operation multiply">x</button>
-                <button class="operation divide">/</button>
+                <button class="function erase" value="erase"><-</button>
+                <button class="operation multiply" value="multiply">x</button>
+                <button class="operation divide" value="divide">/</button>
               </div>
             </div>
             <div class="bottom-btn">
               <div class="line">
-                <button class="num-btn">0</button>
-                <button class="equal">=</button>
+                <button class="num-btn" value="0">0</button>
+                <button class="equal" value="equal">=</button>
               </div>
             </div>
           </div>
