--- a/index.html
+++ b/index.html
@@ -12,38 +12,35 @@
       <div class="header"></div>
       <div class="content">
         <div class="calculator-body">
-          <div class="calculator-display">Display</div>
+          <div class="display-container">
+            <div class="calculator-display">Display</div>
+          </div>
           <div class="calculator-buttons">
-            <div class="top-btn">
-              <div class="col">
-                <button class="operation add" value="add">+</button>
-                <button class="num-btn" value="1">1</button>
-                <button class="num-btn" value="4">4</button>
-                <button class="num-btn" value="7">7</button>
-              </div>
-              <div class="col">
-                <button class="operation subtract" value="subtract">-</button>
-                <button class="num-btn" value="2">2</button>
-                <button class="num-btn" value="5">5</button>
-                <button class="num-btn" value="8">8</button>
-              </div>
-              <div class="col">
-                <button class="function delete" value="clear">AC</button>
-                <button class="num-btn" value="3">3</button>
-                <button class="num-btn" value="6">6</button>
-                <button class="num-btn" value="9">9</button>
-              </div>
-              <div class="col">
-                <button class="function erase" value="erase"><-</button>
-                <button class="operation multiply" value="multiply">x</button>
-                <button class="operation divide" value="divide">/</button>
-              </div>
+            <div class="row">
+              <button class="num-btn" value="7">7</button>
+              <button class="num-btn" value="8">8</button>
+              <button class="num-btn" value="9">9</button>
+              <button class="function-btn" value="delete">AC</button>
+              <button class="function-btn" value="erase"><-</button>
             </div>
-            <div class="bottom-btn">
-              <div class="line">
-                <button class="num-btn" value="0">0</button>
-                <button class="equal" value="equal">=</button>
-              </div>
+            <div class="row">
+              <button class="num-btn" value="4">4</button>
+              <button class="num-btn" value="5">5</button>
+              <button class="num-btn" value="6">6</button>
+              <button class="operation" value="add">+</button>
+              <button class="operation" value="multiply">*</button>
+            </div>
+            <div class="row">
+              <button class="num-btn" value="1">1</button>
+              <button class="num-btn" value="2">2</button>
+              <button class="num-btn" value="3">3</button>
+              <button class="operation" value="subtract">-</button>
+              <button class="operation" value="divide">/</button>
+            </div>
+            <div class="row">
+              <button class="num-btn" value="0">0</button>
+              <button class="operation" value=".">.</button>
+              <button class="equal" value="equal">=</button>
             </div>
           </div>
         </div>
