Style: display padding

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="content">
         <div class="calculator-body">
           <div class="display-container">
-            <div class="calculator-display">Display</div>
+            <div class="calculator-display">0</div>
           </div>
           <div class="calculator-buttons">
             <div class="row">
