Feat: clear and erase buttons

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <button class="num-btn" value="7">7</button>
               <button class="num-btn" value="8">8</button>
               <button class="num-btn" value="9">9</button>
-              <button class="function-btn" value="delete">AC</button>
+              <button class="function-btn" value="clear">AC</button>
               <button class="function-btn" value="erase"><-</button>
             </div>
             <div class="row">
