--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="row">
               <button class="num-btn" value="0">0</button>
-              <button class="operation" value=".">.</button>
+              <button class="decimal" value=".">.</button>
               <button class="equal" value="equal">=</button>
             </div>
           </div>
