Feat: chaining operations
add second row to display

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
       <div class="content">
         <div class="calculator-body">
           <div class="display-container">
-            <div class="calculator-display">0</div>
+            <div class="calculator-display">
+              <div class="display-top">lol</div>
+              <div class="display-bottom">0</div>
+            </div>
           </div>
           <div class="calculator-buttons">
             <div class="row">
