Style: display font and buttons colors

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="calculator-body">
           <div class="display-container">
             <div class="calculator-display">
-              <div class="display-top">lol</div>
+              <div class="display-top"></div>
               <div class="display-bottom">0</div>
             </div>
           </div>
